Fix styling issues on iphone browser

--- a/src/App.sass
+++ b/src/App.sass
@@ -20,9 +20,6 @@ html
   scroll-behavior: smooth
   scroll-padding-top: 1rem
 
-body 
-    background-color: white
-
 
 /* ------------------------------------ */
 /* Mixins */
@@ -58,7 +55,6 @@ body
     bottom: 10vh
     left: 5vw
     z-index: 100
-    font-size: 25px
     @include glassmorphism
     border-radius: 30px
     width: 40px
@@ -332,7 +328,7 @@ body
 /* Skills component */
 
 .skills-container
-    padding-bottom: 20rem
+    padding-bottom: 5rem
     width: 100%
     display: flex
     flex-direction: column
